# tc2-e-commerce

./: .dockerignore  .dvcignore  .env.exemplo  .gitignore  Dockerfile  README.md  dvc.yaml  main.py  pyproject.toml
.dvc/: config
data/processed/: split_info.json
data/raw/: .gitignore  retailrocket.dvc
docs/: DVC_MLFLOW_WORKFLOW.md
models/: baseline_experiments_comparison.csv
notebook/: baseline_experiments.ipynb  eda.ipynb
src/tc2_ecommerce/: __init__.py  api.py  app.py  config.py  data.py  evaluation.py  logging_utils.py  main.py  preprocess.py  reproducibility.py  train.py
src/tc2_ecommerce/factories/: __init__.py  model_factory.py
src/tc2_ecommerce/models/: __init__.py  base.py  dummy.py  item_item.py  neural.py
src/tc2_ecommerce/strategies/: __init__.py  preprocessor.py
