[tool.poetry]
name = "tc2-e-commerce"
version = "0.1.0"
description = "Projeto de e-commerce para o Tech Challenge 02"
readme = "README.md"
packages = [{ include = "tc2_ecommerce", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.0.0"

[tool.poetry.scripts]
tc2-e-commerce = "tc2_ecommerce.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "kaggle (>=2.2.2,<3.0.0)",
    "dvc (>=3.67.1,<4.0.0)",
    "dvc-s3 (>=3.0.0,<4.0.0)",
    "boto3 (>=1.34.0)",
    "s3fs (>=2024.1.0)",
    "mlflow (>=2.9.0,<3.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.3.0,<8.0.0)"
]
